# dealer-gamma-feedback-lab

./: README.md  pyproject.toml
docs/: operating-boundaries.md  recruiter-brief.md  research-note.md  system-design.md  validation-evidence.md
src/dealer_gamma_feedback_lab/: __init__.py  gamma.py
tests/: test_gamma.py
